[gd_scene load_steps=16 format=2]

[ext_resource path="res://objects/enemies/FireSpawner.gd" type="Script" id=1]
[ext_resource path="res://assets/art/tile494.png" type="Texture" id=2]
[ext_resource path="res://assets/art/Particle01.png" type="Texture" id=3]
[ext_resource path="res://objects/common/HealthSystem.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/enemies/IgniteZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/audio/sounds/fire/hit2.wav" type="AudioStream" id=6]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.506757, 0.75 )
colors = PoolColorArray( 1, 0.0313726, 0.0313726, 1, 0.909804, 0.529412, 0.0431373, 0.737255, 1, 0.667969, 0, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 2
emission_box_extents = Vector3( 8, 8, 1 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 30.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 4.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="CircleShape2D" id=6]
radius = 14.4214

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Particles2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "hit"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.4 ),
"transitions": PoolRealArray( 1, 2, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 3, 3 ), Vector2( 2, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.92549, 0.176471, 0.00392157, 1 ), Color( 1, 0.929412, 0.470588, 1 ), Color( 0.92549, 0.176471, 0.00392157, 1 ) ]
}

[node name="FireSpawner" type="Area2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="Particles2D" type="Particles2D" parent="."]
amount = 30
lifetime = 1.4
process_material = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.92549, 0.176471, 0.00392157, 1 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 3 )
texture_scale = 2.38
color = Color( 1, 0.513726, 0, 1 )
energy = 1.59

[node name="HealthSystem" parent="." instance=ExtResource( 4 )]
max_health = 5
current_health = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/die = SubResource( 7 )
anims/form = SubResource( 8 )
anims/hit = SubResource( 9 )

[node name="IgniteZone" parent="." instance=ExtResource( 5 )]
visible = false

[node name="BurnFrequency" parent="IgniteZone" index="1"]
wait_time = 0.2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
pitch_scale = 0.81
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="health_zero" from="HealthSystem" to="." method="_on_HealthSystem_health_zero"]
[connection signal="took_damage" from="HealthSystem" to="." method="_on_HealthSystem_took_damage"]

[editable path="IgniteZone"]
